<resources>
    <string name="app_name">Coloring</string>
    <string name="subject">Coloring</string>
    <string name="colorhelper">ColorHelper</string>
    <string name="imagehelper">ImageHelper</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="back_button">BACK</string>
    <string name="undo_button">UNDO</string>
    <string name="filter_button">FILTER</string>
    <string name="download_button">DOWNLOAD</string>
    <string name="image_edit">EDIT_IMAGE</string>
    <string name="BLUETOOTH_OFF">BLUETOOTH_OFF</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <!-- Bluetooth -->
    <string name="not_connected">기기에 연결되지 않았습니다.</string>
    <string name="bt_not_enabled_leaving">블루투스가 활성화되지 않았습니다. 앱을 종료합니다.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected">connected</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>


    <!--  DeviceListActivity -->
    <string name="scanning">기기 검색중&#8230;</string>
    <string name="select_device">연결할 기기를 선택하세요</string>
    <string name="none_paired">페어링된 기기가 없습니다.</string>
    <string name="none_found">기기를 찾지 못했습니다.</string>
    <string name="title_paired_devices">페어링된 기기들</string>
    <string name="title_other_devices">페어링 가능한 기기들</string>
    <string name="button_scan">기기 검색</string>
    <string name="bt_list">블루투스기기 리스트</string>
    <string name="permission_denied">"권한 사용 동의해야만 APP 구동 가능합니다."</string>
    <string name="About">ABOUT</string>
    <string name="about_develop">ABOUT_DEV</string>
    <string name="about_sub">ABOUT_SUB</string>

</resources>
