<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="20dp">



        <ImageButton
            android:id="@+id/bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/BLUETOOTH_OFF"
            android:onClick="moveFunc"
            android:src="@drawable/selector_btn_bt" />

        <View
            android:id="@+id/view12"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/About"
            android:onClick="moveFunc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/about_button" />



    </LinearLayout>

    <TextView
        android:id="@+id/Subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/subject"
        android:textSize="72sp" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingBottom="60dp">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            />

        <ImageButton
            android:id="@+id/colorHelper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/colorhelper"
            android:onClick="moveFunc"
            android:scaleType="fitCenter"
            android:src ="@drawable/color_helper_icon" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/imageHelper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imagehelper"
            android:onClick="moveFunc"
            android:scaleType="fitCenter"
            android:src ="@drawable/imagehelpericon" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            />
    </LinearLayout>

</android.widget.LinearLayout>