<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/backBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:onClick="clickFunc"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/back_button"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:contentDescription="@string/image_edit"
        android:scaleType="fitCenter"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <ImageButton
            android:id="@+id/fillterBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/filter_button"
            android:onClick="clickFunc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/send_rev" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

        <ImageButton
            android:id="@+id/saveBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:onClick="clickFunc"
            android:background="@android:color/transparent"
            android:contentDescription="@string/download_button"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/download_button" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

    </LinearLayout>

</android.widget.LinearLayout>